[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "volcsarvatory"
version = "1.0.0"
description = "VolcSARvatory"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "ASF SciDev Team", email = "uaf-asf-scidev@alaska.edu"},
]
dependencies = [
    "asf_search @ git+https://github.com/mfangaritav/Discovery-asf_search.git#egg=asf_search[sbas]",
    "cartopy",
    "geopandas",
    "gdal",
    "hyp3_sdk",
    "jupyterlab",
    "mintpy @ git+https://github.com/insarlab/MintPy.git@4bbca8c",
    "networkx",
    "numpy",
    "opensarlab_lib",
    "pandas",
    "plotly",
    "pyarrow",
    "pygmt",
    "pyproj",
    "rasterio",
    "shapely",
]

[project.urls]
documentation = "https://github.com/ASFHyP3/VolcSARvatory"
repository = "https://github.com/ASFHyP3/VolcSARvatory"
